k8s/systems/cilium/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-route
  namespace: kube-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cloudflare-gateway
      namespace: envoy-gateway-system
  hostnames:
    - hubble.bug-farm.xyz
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hubble-ui
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
